# llama.cpp-javacpp

./: .gitignore  Dockerfile  Dockerfile-linux-cuda-x86_64  README.md  build.gradle.kts  clean.bash  cppbuild-cuda.bash  cppbuild-docker-debug.bash  cppbuild-docker-linux-cuda-x86_64-debug.bash  cppbuild-docker-linux-cuda-x86_64.bash  cppbuild-docker.bash  cppbuild.bash  settings.gradle.kts
.github/workflows/: build-natives.yml
patches/: CMakeLists.txt.gguf-cuda.patch
src/main/cpp/: CMakeLists.txt
src/main/cpp/include/: ihmcllamacpp.h
src/main/cpp/src/: ihmcllamacpp.cpp
src/main/java/us/ihmc/llamacpp/: LlamaCPPConfig.java  ggml_abort_callback.java  ggml_backend.java  ggml_backend_buffer.java  ggml_backend_buffer_type.java  ggml_backend_dev_caps.java  ggml_backend_dev_get_extra_bufts_t.java  ggml_backend_dev_props.java  ggml_backend_device.java  ggml_backend_eval_callback.java  ggml_backend_event.java  ggml_backend_feature.java  ggml_backend_get_features_t.java  ggml_backend_graph_copy.java  ggml_backend_graph_plan_t.java  ggml_backend_reg.java  ggml_backend_sched.java  ggml_backend_sched_eval_callback.java  ggml_backend_set_abort_callback_t.java  ggml_backend_set_n_threads_t.java  ggml_backend_split_buffer_type_t.java  ggml_bf16_t.java  ggml_binary_op_f32_t.java  ggml_cgraph.java  ggml_context.java  ggml_cplan.java  ggml_custom1_op_f32_t.java  ggml_custom1_op_t.java  ggml_custom2_op_f32_t.java  ggml_custom2_op_t.java  ggml_custom3_op_f32_t.java  ggml_custom3_op_t.java  ggml_from_float_t.java  ggml_gallocr.java  ggml_init_params.java  ggml_log_callback.java  (+32 more)
(+4 files in other folders)
